--- a/package.json
+++ b/package.json
@@ -9,14 +9,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "amqplib": "^0.10.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
+    "ioredis": "^5.3.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.4",
-    "multer": "^1.4.5-lts.1",
-    "rascal": "^17.0.1"
+    "multer": "^1.4.5-lts.1"
   }
 }
