--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ioredis": "^5.3.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.4",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "pm2": "^5.3.1"
   }
 }
